(cargo-release) version 0.1.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "feature-probe"
-version = "0.1.1-alpha.0"
+version = "0.1.1"
 authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
 description = "Probe for rustc features from build.rs"
 repository = "https://github.com/tov/feature-probe-rs"
