--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ readme = "README.md"
 license = "MIT/Apache-2.0"
 keywords = ["rustc", "features", "probe", "autoconf"]
 categories = ["development-tools"]
+
+[dependencies]
+lazy_static = "1.4"
