Replace mutex with temporary directories; no more `retries` option.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ keywords = ["rustc", "features", "probe", "autoconf"]
 categories = ["development-tools"]
 
 [dependencies]
-lazy_static = "1.4"
+tempfile = "3.1"
